# draytek-vpn

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  install_dependencies.sh  release.sh
data/: com.draytek.vpn.policy  draytek-vpn-tray.desktop
networkmanager/: Cargo.toml  README.md  build_deb.sh  dependencies.txt
networkmanager/auth-dialog/: Makefile  main.c  nm-draytek-auth-dialog
networkmanager/data/: 90-draytek-vpn-tray  nm-draytek-service.conf  nm-draytek-service.name
networkmanager/editor/: Makefile  nm-draytek-editor-plugin.c  nm-draytek-editor.c  nm-draytek-editor.h  nm-vpn-plugin-utils.c  nm-vpn-plugin-utils.h
networkmanager/src/: main.rs  plugin.rs  tun_device.rs  tunnel.rs
networkmanagertray/data/: draytek-vpn-tray.desktop
networkmanagertray/src/: format.rs  icons.rs  main.rs  nm_monitor.rs  tray_impl.rs
packaging/arch/: PKGBUILD  README.md  draytek-vpn-networkmanager.install
protocol/: Cargo.toml
protocol/src/: connection.rs  constants.rs  engine_common.rs  keepalive.rs  lib.rs  negotiate.rs  routing.rs  types.rs
protocol/src/protocol/: fsm.rs  ipcp.rs  lcp.rs  mod.rs  ppp.rs  ppp_control.rs  sstp.rs
protocol/src/protocol/auth/: mod.rs  mschap.rs  pap.rs
src/: app.rs  config.rs  logging.rs  messages.rs
src/tunnel/: engine.rs  mod.rs
src/ui/: log_view.rs  profile_editor.rs
standalone/: Cargo.toml  build_appimage.sh  dependencies.txt
standalone/data/: draytek-vpn.desktop
standalone/src/: app.rs  config.rs  glib_channels.rs  main.rs
standalone/src/tunnel/: engine.rs  privilege.rs  tun_device.rs
standalone/src/ui/: connection_view.rs  log_view.rs  mod.rs  profile_editor.rs  window.rs
tray/: Cargo.toml
tray/src/: format.rs  icons.rs  main.rs  nm_monitor.rs  stats.rs  tray_impl.rs
