[workspace]
members = [".", "protocol", "networkmanager", "tray"]

[package]
name = "draytek-vpn"
version = "0.1.0"
edition = "2021"
description = "DrayTek SSL VPN client for Linux"
default-run = "draytek-vpn"

[[bin]]
name = "draytek-vpn"
path = "src/main.rs"

[[bin]]
name = "draytek-vpn-helper"
path = "src/bin/draytek-vpn-helper.rs"

[dependencies]
# Shared protocol library
draytek-vpn-protocol = { path = "protocol" }
# UI
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_5"] }

# Async
tokio = { version = "1", features = ["full"] }

# TLS
openssl = "0.10"
tokio-openssl = "0.6"

# TUN device
tun-rs = { version = "2", features = ["async_tokio"] }

# Crypto (MS-CHAPv2 needs MD4, SHA1, DES)
md4 = "0.10"
sha1 = "0.10"
des = "0.8"
cipher = "0.4"

# Serialization, logging, utilities
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
base64 = "0.22"
rand = "0.9"
dirs = "5"
keyring = { version = "3", features = ["sync-secret-service"] }
regex = "1"
anyhow = "1"
thiserror = "2"
bytes = "1"
digest = "0.10"
libc = "0.2"
time = { version = "0.3.47", features = ["formatting", "local-offset", "macros"] }
