[package]
name = "draytek-vpn-nm"
version = "0.1.0"
edition = "2021"
description = "DrayTek SSL VPN NetworkManager plugin"

[[bin]]
name = "draytek-vpn-nm"
path = "src/main.rs"

[dependencies]
draytek-vpn-protocol = { path = "../protocol" }
zbus = { version = "5", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-openssl = "0.6"
openssl = "0.10"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
bytes = "1"
tun-rs = { version = "2", features = ["async_tokio"] }
